[gd_scene load_steps=5 format=2]

[ext_resource path="res://Zombies/GeneralZombie.gd" type="Script" id=1]
[ext_resource path="res://Game/HitHurtbox.tscn" type="PackedScene" id=2]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 6, 3 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 8, 5 )

[node name="ZombieBlueprint" type="Node2D"]
position = Vector2( 0, -5 )
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 1 )

[node name="Walking" type="AnimatedSprite" parent="."]
position = Vector2( 0, -4 )
speed_scale = 0.6
playing = true

[node name="WalkingAccessory" type="AnimatedSprite" parent="Walking"]
speed_scale = 0.6
playing = true

[node name="Eating" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 0, -4 )
speed_scale = 1.5
playing = true

[node name="EatingAccessory" type="AnimatedSprite" parent="Eating"]
visible = false
speed_scale = 1.5

[node name="HitBox" parent="." instance=ExtResource( 2 )]
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" parent="HitBox" index="0"]
shape = SubResource( 2 )

[node name="HurtBox" parent="." instance=ExtResource( 2 )]
collision_layer = 4

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2( 2, -1 )
shape = SubResource( 4 )

[node name="AttackTimer" type="Timer" parent="."]

[node name="SlowTimer" type="Timer" parent="."]

[connection signal="area_entered" from="HitBox" to="." method="_on_HitBox_area_entered"]
[connection signal="area_exited" from="HitBox" to="." method="_on_HitBox_area_exited"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
[connection signal="timeout" from="SlowTimer" to="." method="_on_SlowTimer_timeout"]

[editable path="HitBox"]
[editable path="HurtBox"]
